[tool.poetry]
name = "cocktail-creator-server"
version = "0.1.0"
description = ""
authors = ["Colin Parente <69608638+cp8689@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
requests = "^2.31.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
